# aomi-hedge-sniper

./: .env.example  .gitignore  CHECKLIST.md  README.md  SPEC.md  package.json  tsconfig.base.json
apps/web/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/hedge/: route.ts
apps/web/components/: HedgeFrame.tsx
apps/web/lib/: aomi-mock.ts  correlation.ts  covering-portfolio.ts  polymarket.ts  seed.ts  system-prompt.ts  types.ts
distribution/: blog.md  one-pager.md  thread.md  video-script.md
docs/: ARCHITECTURE.md  DEMO-WALKTHROUGH.md  ROADMAP.md
rust-plugin/: Cargo.toml  README.md
rust-plugin/src/: lib.rs  tool.rs  types.rs
scripts/: capture-screenshots.ts  seed-hedge-demo.ts  verify-env.ts
skill/: SKILL.md
skill/examples/: find-50usdc-hedge.md  place-after-review.md
